envoy-sample-demo/stationay-envoy-demo.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_service_route
            virtual_hosts:
            - name: all_local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/stationaries"
                route:
                  cluster: stationaries
              - match:
                  prefix: "/books"
                route:
                  cluster: books

  clusters:
  - name: stationaries
    connect_timeout: 5s
    load_assignment:
      cluster_name: stationaries
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  - name: books
    connect_timeout: 5s
    load_assignment:
      cluster_name: books
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
